# machine-learning-engineering

./: .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile.dataset-stats  README.md  lab01.ipynb  lab01.py  main.py  mlflow.db  predict_nn.py  process_data.sh  pyproject.toml  register_model.py  train_nn.py
mlruns/1/8a1acbf283f5436dbed4741a6639f74a/artifacts/documentation/: model_card_4i_33ds2.md
