[project]
name = "ium-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "joblib>=1.4.2",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "mlflow>=2.20.0",
    "numpy>=2.4.2",
    "pandas>=2.2,<3",
    "scikit-learn>=1.8.0",
]
